Issue #556458: Remove 'nowrap' attributes from uc_cart.

--- a/uc_cart/uc_cart.css
+++ b/uc_cart/uc_cart.css
@@ -28,6 +28,7 @@
   font-weight: bold;
   padding-left: 3em;
   text-align: right;
+  white-space: nowrap;
 }
 
 .order-review-table .data-col {
@@ -122,30 +123,9 @@
 /**
  * CSS rules for the cart review table.
  */
-.cart-review {
-  border: solid 1px #bbb;
-}
-
-.cart-review td {
-  padding: .4em;
-}
-
-.cart-review thead tr {
-  border: 0em;
-  font-weight: bold;
-}
-
-.cart-review tbody {
-  border-top: 0em;
-}
-
-.cart-review tbody tr {
-  border: 0em;
-  vertical-align: top;
-}
-
 td.qty {
   text-align: center;
+  white-space: nowrap;
 }
 
 td.price {
